--- a/index.html
+++ b/index.html
@@ -1,12 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-            <title> My github page</title>
+<head>
+    <meta charset="utf-8">
+    <title>Kamil Kadej, Junior Back-end developer on JetBrains Academy</title>
 
-    </head>
-    <body>
-        <h1>This is my GitHub Pages website</h1>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+
+<div>
 
 
-    </body>
-</html>
+</div>
+
+
+
+<p class="cart">
+
+
+    <button  id="btnMenuClass" class="btnMenuClass" type="button" onclick="myFunction()"><i class="fa fa-bars"></i>
+    </button>
+<div class="smallMenu" id="myLinks">
+    <nav class="navbar navbar-dark navbar-expand-lg" >
+        <ul class="navbar-nav" id="myLinks2">
+            <div class="hamburger">
+                <li class="nav-item">
+                    <a class="nav-link" href="#aboutsection">About me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#portfoliodiv">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#stopka">Contacts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"  href="#glowa">Home</a>
+                </li>
+            </div>
+        </ul>
+</div>
+
+</div>
+<p>
+
+
+
+
+<header id="glowa" >
+    <div class="d-flex justify-content-end" id="meeenu">
+        <nav class="navbar navbar-dark navbar-expand-lg" >
+            <div class="glowaKlas">
+                <div class="container-fluid">
+                    <ul class="navbar-nav">
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#aboutsection">About me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#portfoliodiv">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#stopka">Contacts</a>
+                        </li>
+                        <li class="nav-item" id="dom">
+                            <a class="nav-link"  href="#glowa">Home</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <div id="naglowek">
+        <p id="tytul">Kamil Kadej, aspiring<br>Junior Back-end<br>and Front-End developer<br>on JetBrains Academy</p>
+    </div>
+</header>
+
+<div id="aboutsection">
+
+    <div class="obrazyKlasa" id="obrazy">
+        <img src="css/images/image.jpg" id="piktur1">
+        <img src="css/images/image.jpg" id="piktur2">
+        <img src="css/images/image.jpg" id="piktur3">
+    </div>
+
+    <div id="aboutsection2">
+        <section id="about" about="About me">
+            <h2>About me</h2>
+            <p>
+                Hello. J've been learning in Hyperskill JetBrains Academy since December 2020. For now (03.09.2021) I've completed with Hyperskill:
+            <ul>
+                <li>7 tracks - most difficult: Java Developer(5 projects), Java Desktop Application Developer (1 project), Java Junior Developer(WEB, Spring) </li>
+                <li>Completed 534 topics</li>
+                <li>Solved 2587 problems</li>
+                <li>Completed 6 projects</li>
+                <li>Spent over nominal 300 hours on Hyperskill (or even more I think)</li>
+            </ul>
+            </p>
+            <p>Every day I still develop new skills with JetBrains Academy. Now I am on Frontend Developer Track.
+            </p>
+
+            <p>In parallel, I am learning CS50's Web Programming with Python and JavaScript, HarvardX's online course.</p>
+            <p>For now, I've made five on six projets.</p>
+
+        </section>
+    </div>
+
+</div>
+
+
+<div id="portfoliodiv">
+    <section class="portfolio" id="portfolio">
+        <h1>Portfolio</h1>
+
+
+        <section class="porfol" id="wykaz">
+
+
+        </section>
+    </section>
+</div>
+
+
+
+<footer id="stopka" >
+	
+    <div class="d-flex flex-column justify-content-center" style="text-align: center;">
+		<h2>Created with pain. No pain, no gain.</h2>
+		
+		<p>kamil1006 @ o2 . pl<p>
+	</div>
+	
+</footer>
+
+
+
+
+<!-- The Modal  The Modal The Modal The Modal The Modal The Modal -->
+<div id="myModal" class="window">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="modal-header">
+            <span class="close">&times;</span>
+            <h2>Description</h2>
+        </div>
+        <div class="modal-body" id="modal-body">
+            <div id="modal-body-real"></div>
+            <!--
+              <p>Some text in the Modal Body</p>
+              <p>Some other text...</p>
+              <button>Close button</button>
+              -->
+
+
+        </div>
+        <div class="modal-footer" id="contacts">
+            <h3>made with passion</h3>
+			
+        </div>
+    </div>
+
+</div>
+
+<!-- The Modal  The Modal The Modal The Modal The Modal The Modal -->
+
+<script src="scripts/portfel.js"></script>
+<script src="scripts/script.js"></script>
+
+
+
+</body>
