--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div id="naglowek">
-        <p id="tytul">Kamil Kadej, aspiring<br>Junior Back-end<br>and Front-End developer<br>on JetBrains Academy</p>
+        <p id="tytul">Kamil Kadej, candidate to<br>Junior Back-end<br>and Front-End developer<br>on JetBrains Academy</p>
     </div>
 </header>
 
@@ -92,7 +92,7 @@
         <section id="about" about="About me">
             <h2>About me</h2>
             <p>
-                Hello. J've been learning in Hyperskill JetBrains Academy since December 2020. For now (03.09.2021) I've completed with Hyperskill:
+                Hello. I've been learning in Hyperskill JetBrains Academy since December 2020. For now (03.09.2021) I've completed with Hyperskill:
             <ul>
                 <li>7 tracks - most difficult: Java Developer(5 projects), Java Desktop Application Developer (1 project), Java Junior Developer(WEB, Spring) </li>
                 <li>Completed 534 topics</li>
@@ -105,7 +105,7 @@
             </p>
 
             <p>In parallel, I am learning CS50's Web Programming with Python and JavaScript, HarvardX's online course.</p>
-            <p>For now, I've made five on six projets.</p>
+            <p>For now, I've made five on six projects.</p>
 
         </section>
     </div>
