--- a/index.html
+++ b/index.html
@@ -92,20 +92,27 @@
         <section id="about" about="About me">
             <h2>About me</h2>
             <p>
-                Hello. I've been learning in Hyperskill JetBrains Academy since December 2020. For now (03.09.2021) I've completed with Hyperskill:
+                Hello. I've been learning in Hyperskill JetBrains Academy since December 2020. For now (28.09.2021) I've completed with Hyperskill:
             <ul>
-                <li>7 tracks - most difficult: Java Developer(5 projects), Java Desktop Application Developer (1 project), Java Junior Developer(WEB, Spring) </li>
-                <li>Completed 534 topics</li>
-                <li>Solved 2587 problems</li>
-                <li>Completed 6 projects</li>
-                <li>Spent over nominal 300 hours on Hyperskill (or even more I think)</li>
+                <li>7 tracks, for example: </li>
+					<ul>
+						<li>Java Developer</li>
+						<li>Java Desktop Application Developer</li>
+						<li>Java Junior Developer(WEB, Spring)</li>
+						<li>Java Backend Developer</li>
+						<li>Frontend Developer - in progress (84%)</li>
+					</ul>
+                <li>Completed 548 topics</li>
+                <li>Solved 2695 problems</li>
+                <li>Completed 8 projects</li>
+                <li>Spent over nominal 400 hours on Hyperskill (or even more I think)</li>
             </ul>
             </p>
             <p>Every day I still develop new skills with JetBrains Academy. Now I am on Frontend Developer Track.
             </p>
 
             <p>In parallel, I am learning CS50's Web Programming with Python and JavaScript, HarvardX's online course.</p>
-            <p>For now, I've made five on six projects.</p>
+            <p>For now, I've made five of six projects.</p>
 
         </section>
     </div>
