--- a/index.html
+++ b/index.html
@@ -100,19 +100,26 @@
 						<li>Java Desktop Application Developer</li>
 						<li>Java Junior Developer(WEB, Spring)</li>
 						<li>Java Backend Developer</li>
-						<li>Frontend Developer - in progress (84%)</li>
+						<li>Frontend Developer - in progress (over 80%)</li>
 					</ul>
                 <li>Completed 548 topics</li>
                 <li>Solved 2695 problems</li>
                 <li>Completed 8 projects</li>
                 <li>Spent over nominal 400 hours on Hyperskill (or even more I think)</li>
+				<li>
+					
+					<a class="btn btn-secondary button_details2" id="detailjetbrains">more details</a>
+					
+				</li>
             </ul>
             </p>
             <p>Every day I still develop new skills with JetBrains Academy. Now I am on Frontend Developer Track.
             </p>
 
             <p>In parallel, I am learning CS50's Web Programming with Python and JavaScript, HarvardX's online course.</p>
-            <p>For now, I've made five of six projects.</p>
+            <p>For now, I've made five of six projects.
+			<a class="btn btn-secondary button_details2" id="detailharvard">more details</a>
+			</p>
 
         </section>
     </div>
