--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </p>
 
             <p>In parallel, I am learning CS50's Web Programming with Python and JavaScript, HarvardX's online course.</p>
-            <p>For now, I've made five of six projects.
+            <p>For now, I've finished six of six projects and  have finished entire course.
 			<a class="btn btn-secondary button_details2" id="detailharvard">more details</a>
 			</p>
 
