--- a/index.html
+++ b/index.html
@@ -92,18 +92,19 @@
         <section id="about" about="About me">
             <h2>About me</h2>
             <p>
-                Hello. I've been learning in Hyperskill JetBrains Academy since December 2020. For now (28.09.2021) I've completed with Hyperskill:
+                Hello. I've been learning in Hyperskill JetBrains Academy since December 2020. For now (25.10.2021) I've completed with Hyperskill:
             <ul>
-                <li>7 tracks, for example: </li>
+                <li>8 tracks, for example: </li>
 					<ul>
 						<li>Java Developer</li>
 						<li>Java Desktop Application Developer</li>
 						<li>Java Junior Developer(WEB, Spring)</li>
 						<li>Java Backend Developer</li>
-						<li>Frontend Developer - in progress (over 80%)</li>
+						<li>Frontend Developer</li>
+                        <li>Django Developer - in progress (over 40% done)</li>
 					</ul>
-                <li>Completed 548 topics</li>
-                <li>Solved 2695 problems</li>
+                <li>Completed 586 topics</li>
+                <li>Solved 2924 problems</li>
                 <li>Completed 8 projects</li>
                 <li>Spent over nominal 400 hours on Hyperskill (or even more I think)</li>
 				<li>
@@ -113,11 +114,11 @@
 				</li>
             </ul>
             </p>
-            <p>Every day I still develop new skills with JetBrains Academy. Now I am on Frontend Developer Track.
+            <p>Every day I still develop new skills with JetBrains Academy. Now I am on Django Developer Track.
             </p>
 
-            <p>In parallel, I am learning CS50's Web Programming with Python and JavaScript, HarvardX's online course.</p>
-            <p>For now, I've finished six of six projects and  have finished entire course.
+            <p>In parallel, I was learning CS50's Web Programming with Python and JavaScript, HarvardX's online course.</p>
+            <p>For now, I've finished six of six projects and have finished entire course!.
 			<a class="btn btn-secondary button_details2" id="detailharvard">more details</a>
 			</p>
 
