--- a/pages/words_searcher.html
+++ b/pages/words_searcher.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <hr>
- <h1 style="text-align:center;">This site helps to learn english/german by finding it in dictionary using JavaScript and 
+ <h1 style="text-align:center;">This site helps to learn english/german by finding words in dictionary using JavaScript and 
 		<strong>https://dictionaryapi.dev/</strong></h1>
  <hr>
  <div class="container">
