--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div id="naglowek">
-        <p id="tytul">Kamil Kadej, candidate to<br>Junior Back-end<br>and Front-End developer<br>on JetBrains Academy</p>
+        <p id="tytul">Kamil Kadej, <br>Junior Back-end<br>and Front-End developer<br>on JetBrains Academy</p>
     </div>
 </header>
 
